added node start

--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "SuperwpAPI",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
+  "scripts":{
+    "test": "",
+    "start": "node app.js"
+  },
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.1",
